# object_tracking

./: .gitignore  CMakeLists.txt  communicator.cpp  communicator.hpp  detector.cpp  detector.hpp  main.cpp  routines.cpp  routines.hpp
